--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 
 * {
     box-sizing: border-box;
-    border: 1px solid red;
+    <!--border: 1px solid red;-->
 }
 
 html {
@@ -29,7 +29,7 @@ html {
   }
 
 .main-img {
-    border: 0px;
+    border: 1px solid white;
     border-radius: 50%;
 }
 
@@ -62,6 +62,8 @@ a:hover {
 
 .contacts-list {
     list-style: none;
+    text-align: left;
+    padding: 0px;
 }
 
 .contacts-list li img {
@@ -73,15 +75,10 @@ a:hover {
     display: inline;
 }
 
-@media (max-width: 768px) {
-    .section {
-      width: 100%;
-    }
-}
 
 .column-left {
     width: 30%;
-    padding: 0px 10px;
+    padding: 0px 30px;
     display: flex;
     flex-direction: column;
     background-color: #b3c7ac;
@@ -89,7 +86,7 @@ a:hover {
 
 .column-right {
     width: 70%;
-    padding: 0px 10px;
+    padding: 0px 30px;
     display: flex;
     flex-direction: column;
 }
@@ -98,11 +95,61 @@ a:hover {
     display: flex;
 }
 
-.section-name {
-    height: 240px;
+h1 {
+    padding: 20px 0px;
+    font-size: 36px;
 }
 
-h1 {
-    padding: 40px 0px;
-    font-size: 36px;
+.date {
+    width: 100px;
+    padding: 0px 5px;
+    display: flex;
+    flex-direction: column;
+    background-color: #b3c7ac;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    border: 0px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.exp-list {
+    width: 85%;
+    padding: 0px 10px;
+}
+
+.exp {
+    display: flex;
+    align-items: flex-start;
+}
+
+.org-name {
+    font-weight: bold;
+}
+
+pre {
+    background-color: #ecede5;
+}
+
+@media (max-width: 768px) {
+    .main {
+      flex-direction: column;
+    }
+
+    .column {
+        width: 100%;
+    }
+}
+
+@media (min-width: 768px) {
+    .d-lg-none {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .d-none {
+        display: none;
+    }
 }
