--- a/style.css
+++ b/style.css
@@ -12,11 +12,10 @@
 body {
     font-family: 'Raleway';
     color: #3a3843;
-    min-height: 100vh;
-    margin: 0; padding: 0;
+    margin: 0 auto;
+    position: absolute;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
 * {
