--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ html {
     padding: 0 20px;
     transition: .3s;
     color: white;
-    transition: .3s;
+    transition: .5s;
 }
 
 .contacts-list {
@@ -57,7 +57,6 @@ html {
 .contacts-list li img,
 .footer img {
     margin: 5px 10px 5px 0;
-
     vertical-align: middle;
 }
 
@@ -70,7 +69,7 @@ html {
 }
 
 .column-left {
-    width: 25% auto;
+    width: 300px;
     padding: 0px 30px;
     margin: 0 auto;
     display: flex;
@@ -80,7 +79,6 @@ html {
 }
 
 .column-right {
-    width: 75% auto;
     padding: 0px 30px;
     margin: 0 auto;
     display: flex;
@@ -119,16 +117,10 @@ code {
     color: #7eb5d5;
 }
 
-#projects {
-    width: 100%;
-}
-
 #projects a img {
-    height: 145px;
-    width: 229px;
     margin-top: 5px;
-    border: 0px;
     border-radius: 5px;
+    width: 100%;
 }
 
 #projects a img {
@@ -192,7 +184,7 @@ pre {
 }
 
 .footer div a:hover {
-    color: red;
+    color: #465f46;
 }
 
 body {
@@ -217,7 +209,12 @@ body {
     h1 {
         text-align: center;
     }
-}    
+
+    #projects a img {
+        width: 100%;
+        height: 100%;
+    }
+}
 
 @media (min-width: 768px) {
     .d-lg-none {
@@ -230,9 +227,13 @@ body {
     }
 
     #code {
+        width: calc(50% - 15px);
         margin-right: 30px;
     }
     
+    #projects {
+        width: calc(50% - 15px);
+    }
 }
 
 @media (max-width: 768px) {
@@ -241,8 +242,19 @@ body {
     }
 }
 
+@media (width: 768px) {
+    .d-lg-none {
+        display: block;
+    }
+    
+    #projects a img {
+        height: auto;
+    }
+}
+
 a {
     text-decoration: none;
+    transition: .5s;
 }
 
 a:hover {
