fix: change layout for burger menu

--- a/style.css
+++ b/style.css
@@ -236,6 +236,11 @@ body {
     }
 }
 
+#button,
+[for=button] {
+    display: none;
+}
+
 @media (max-width: 768px) {
     .d-none {
         display: none;
@@ -245,16 +250,18 @@ body {
         margin-top: 30px;
     }
 
-    .nav-link {
+    .nav {
         display: none;
     }
 
-    .nav-menu {
-        width: 30px;
-        height: 30px;
-        position: relative;
+    [for=button] {
+        display: block;
+        width: 40px;
+        height: 40px;
+        position: fixed;
+        right: 15px;
+        top: 12px;
         z-index: 2;
-        overflow: hidden;
     }
 
     .nav-menu span {
@@ -272,6 +279,17 @@ body {
 
     .nav-menu span:nth-of-type(3) {
         top: 40px;
+    }
+
+    .nav {
+        display: block;
+        position: fixed;
+        width: 100%;
+        padding: 10px;
+        margin-top: 0;
+        background-color:#94af8a;
+        opacity: 0.9;
+        /*visibility: hidden;*/
     }
 }
 
