--- a/style.css
+++ b/style.css
@@ -214,6 +214,14 @@ body {
         width: 100%;
         height: 100%;
     }
+
+    .d-none {
+        display: none;
+    }
+
+    .main-img {
+        margin-top: 30px;
+    }
 }
 
 @media (min-width: 768px) {
@@ -234,51 +242,48 @@ body {
     #projects {
         width: calc(50% - 15px);
     }
-}
 
-#button,
-[for=button] {
-    display: none;
+    #button {
+        display: none;
+    }
 }
 
 @media (max-width: 768px) {
-    .d-none {
+    #button {
         display: none;
     }
 
-    .main-img {
-        margin-top: 30px;
-    }
-
-    .nav {
-        display: none;
-    }
-
-    [for=button] {
-        display: block;
-        width: 40px;
-        height: 40px;
+    .menu-button {
+        display: flex;
+        width: 35px;
+        height: 35px;
         position: fixed;
+        align-items: center;
         right: 15px;
-        top: 12px;
+        top: 15px;
         z-index: 2;
+        cursor: pointer;
     }
 
-    .nav-menu span {
-        width: 30px;
+    .menu-button > span,
+    .menu-button > span::before,
+    .menu-button > span::after {
+        display: block;
+        position: absolute;
+        width: 100%;
         height: 3px;
-        position: fixed;
-        right: 20px;
-        top: 20px;
         background-color: white;
+        box-shadow: 1px 1px 5px #bac0b6;
     }
 
-    .nav-menu span:nth-of-type(2) {
-        top: 30px;
+    .menu-button > span::before {
+        content: '';
+        top: -10px;
     }
 
-    .nav-menu span:nth-of-type(3) {
-        top: 40px;
+    .menu-button > span::after {
+        content: '';
+        top: 10px;
     }
 
     .nav {
@@ -289,7 +294,27 @@ body {
         margin-top: 0;
         background-color:#94af8a;
         opacity: 0.9;
-        /*visibility: hidden;*/
+        visibility: hidden
+    }
+
+    #button:checked ~ .menu-button > span {
+        transform: rotate(45deg);
+        transition: 0.5s;
+    }
+
+    #button:checked ~ .menu-button > span::before {
+        top: 0;
+        transform: rotate(0);
+    }
+
+    #button:checked ~ .menu-button > span::after {
+        top: 0;
+        transform: rotate(90deg);
+        transition: 0.5s;
+    }
+
+    #button:checked + label + nav {
+        visibility: visible;
     }
 }
 
