--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ body {
 }
 
 .main-img {
-  width: 240px;
-  height: 240px;
+  width: 100%;
+  aspect-ratio: 1 / 1;
   display: block;
   margin: 20px auto;
   margin-top: 35px;
@@ -43,37 +43,41 @@ body {
   border-radius: 50%;
 }
 
-.contacts-list {
+.section__main {
+  margin-bottom: 20px;
+}
+
+.contacts {
   list-style: none;
   text-align: left;
   padding: 0px;
 }
 
-.icon,
-.footer img {
+.contacts__item {
+  display: flex;
+  align-items: center;
+}
+
+.contacts__link {
+  color: white;
+}
+
+.icon {
   margin: 5px 10px 5px 0;
   vertical-align: middle;
 }
 
-.contacts-list li p {
-  display: inline;
-}
-
-.contacts-list a {
-  color: white;
-}
-
-a {
+.contacts__link {
   text-decoration: none;
-  transition: 0.5s;
+  transition: all 0.3s ease-in-out;
 }
 
-a:hover {
+.contacts__link:hover {
   color: #465f46;
 }
 
 .column-left {
-  width: 300px;
+  width: 27%;
   padding: 0px 30px;
   margin: 0 auto;
   display: flex;
@@ -83,6 +87,7 @@ a:hover {
 }
 
 .column-right {
+  width: 73%;
   padding: 0px 30px;
   margin: 0 auto;
   display: flex;
@@ -93,16 +98,21 @@ a:hover {
   display: flex;
 }
 
-h1 {
+.title {
+  display: none;
+}
+
+.section__title {
+  margin-top: 25px;
+  margin-bottom: 0;
+}
+
+.main-title {
   font-family: 'Raleway';
   font-size: 38px;
   align-items: center;
   margin-top: 40px;
   margin-bottom: 5px;
-}
-
-h2 {
-  margin-bottom: 0;
 }
 
 .speciality {
@@ -135,39 +145,17 @@ hr {
   margin-bottom: 0;
 }
 
-.courses {
+.section__list {
   padding-left: 18px;
 }
 
-code {
-  font-size: 16px;
-}
-
-.js-keyword {
-  color: #5353a3;
-}
-
-.js-function {
-  color: #d2d25d;
-}
-
-.js-result {
-  color: #7eb5d5;
-}
-
-.projects-block {
+.section__projects {
   width: 100%;
 }
 
-.projects-wrapper {
+.projects__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-}
-
-.projects-item {
-  width: 100%;
-  display: flex;
   gap: 20px;
 }
 
@@ -179,21 +167,17 @@ code {
   aspect-ratio: 2/1;
 }
 
-.project-info {
-  display: flex;
-  flex-direction: column;
-}
-
 .project-title {
   color: #3a3843;
   font-weight: bold;
+  text-decoration: none;
 }
 
 .project-title:hover {
   color: #adc1aa;
 }
 
-.date {
+.experience__date {
   width: 115px;
   padding: 0px 4px 3px 4px;
   display: flex;
@@ -208,48 +192,41 @@ code {
   text-align: center;
 }
 
-.exp-list {
+.experience__desc {
   width: 85%;
   padding: 0px 10px;
 }
 
-.exp {
+.experience__item {
   display: flex;
   align-items: flex-start;
 }
 
-.exp-list p {
+.experience__org,
+.experience__position {
   margin: 0;
 }
 
-.exp-list .org-name {
+.experience__org {
   margin-top: 15px;
   font-weight: bold;
 }
 
-pre {
-  background-color: #ecede5;
-}
-
-.experience {
+.experience__wrapper {
   display: flex;
   gap: 20px;
 }
 
-.experience-left {
+.experience__left {
   width: 50%;
 }
 
-.experience-right {
+.experience__right {
   width: 50%;
 }
 
-#education {
-  margin-bottom: 62px;
-}
-
-.section-title {
-  margin-top: 25px;
+.section__education {
+  margin-bottom: 33px;
 }
 
 .education-title,
@@ -277,131 +254,29 @@ pre {
     flex-direction: column;
   }
 
+  .title {
+    display: block;
+  }
+
+  .about-title,
+  .stack-title {
+    margin-top: 20px;
+  }
+
   .column {
     width: 100%;
   }
 
-  h1 {
+  .title {
     text-align: center;
   }
 
-  .d-none {
+  .section__main {
     display: none;
   }
 
   .main-img {
+    max-width: 350px;
     margin-top: 30px;
-  }
-}
-
-@media (min-width: 768px) {
-  .d-lg-none {
-    display: none;
-  }
-
-  .projects-block {
-    display: flex;
-    flex-direction: column;
-  }
-
-  #code {
-    width: 100%;
-    margin-right: 30px;
-  }
-
-  #projects {
-    width: 100%;
-  }
-
-  #button {
-    display: none;
-  }
-}
-
-@media (max-width: 768px) {
-  #button:checked ~ .menu-button > span {
-    transform: rotate(45deg);
-    transition: 0.5s;
-  }
-
-  #button:checked ~ .menu-button > span::before {
-    top: 0;
-    transform: rotate(0);
-  }
-
-  #button:checked ~ .menu-button > span::after {
-    top: 0;
-    transform: rotate(90deg);
-    transition: 0.5s;
-  }
-
-  #button:checked ~ .nav-list {
-    visibility: visible;
-  }
-
-  #button {
-    display: none;
-  }
-
-  .menu-button {
-    display: flex;
-    width: 35px;
-    height: 35px;
-    position: fixed;
-    align-items: center;
-    right: 15px;
-    top: 15px;
-    z-index: 2;
-    cursor: pointer;
-  }
-
-  .menu-button > span,
-  .menu-button > span::before,
-  .menu-button > span::after {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 3px;
-    background-color: white;
-    box-shadow: 1px 1px 5px #bac0b6;
-  }
-
-  .menu-button > span::before {
-    content: '';
-    top: -10px;
-  }
-
-  .menu-button > span::after {
-    content: '';
-    top: 10px;
-  }
-
-  .nav-list {
-    position: fixed;
-    width: 100%;
-    background-color: #94af8a;
-    opacity: 0.9;
-    visibility: hidden;
-  }
-
-  .nav-link {
-    padding: 5px;
-    margin: 5px;
-    transition: 0s;
-  }
-
-  .nav {
-    justify-content: left;
-    padding: 0 50px 0 20px;
-  }
-}
-
-@media (width: 768px) {
-  .d-lg-none {
-    display: block;
-  }
-
-  #projects a img {
-    height: auto;
   }
 }
