--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 }
 
 .section__main {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .contacts {
@@ -103,7 +103,7 @@ body {
 }
 
 .section__title {
-  margin-top: 25px;
+  margin-top: 10px;
   margin-bottom: 0;
 }
 
@@ -111,8 +111,8 @@ body {
   font-family: 'Nunito';
   font-size: 38px;
   align-items: center;
-  margin-top: 40px;
-  margin-bottom: 5px;
+  margin-top: 25px;
+  margin-bottom: 0;
 }
 
 .speciality {
@@ -230,7 +230,8 @@ hr {
 
 .education-title,
 .projects-title {
-  margin-top: 10px;
+  margin-top: 0;
+  margin-bottom: 5px;
 }
 
 .courses-title {
