--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body {
 }
 
 .section__title {
-  margin-top: 25px;
+  margin-top: 20px;
   margin-bottom: 0;
 }
 
@@ -147,6 +147,13 @@ hr {
   margin-bottom: 0;
 }
 
+.skills-list {
+  height: 140px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
 .section__list {
   padding-left: 18px;
 }
@@ -158,7 +165,7 @@ hr {
 .projects__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
 }
 
 .project-image {
@@ -216,8 +223,10 @@ hr {
 }
 
 .experience__wrapper {
+  height: 190px;
   display: flex;
-  gap: 20px;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .experience__left {
