--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ hr {
 }
 
 .skills-list {
-  height: 140px;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -223,7 +223,7 @@ hr {
 }
 
 .experience__wrapper {
-  height: 190px;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -259,6 +259,22 @@ hr {
   border: 0px;
   border-radius: 5px;
   text-align: center;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  background-color: #eee;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #c6d7c4;
+}
+
+@media (min-width: 1100px) {
+  .skills-list,
+  .experience__wrapper {
+    height: 190px;
+  }
 }
 
 @media (max-width: 768px) {
