fix: fix styles

--- a/style.css
+++ b/style.css
@@ -271,7 +271,10 @@ hr {
 }
 
 @media (min-width: 1100px) {
-  .skills-list,
+  .skills-list {
+    height: 150px;
+  }
+
   .experience__wrapper {
     height: 190px;
   }
